<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_human_detector</name>
  <version>0.0.1</version>
  <description>Detect humans using depthai and publish to RMF</description>
  <maintainer email="yadunund@openrobotics.org">Yadunund</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>depthai</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rmf_obstacle_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
